# TerraE

./: .gitignore  LICENSE  README.md  create_10layer_soilsModelE.py  soils_ModelE_InputFileGenerator.py
archive/: README.md
doc/: terrae_technical_description.tex
notebooks/: sample_run_demo.ipynb
scripts/: README.md  compare_explicit_implicit.py  sample_run.py  test_implicit_minimal.py  visualize_run.py
src/: terrae_biome_interface.f90
src/terrae/: driver.py  types.py
src/terrae/soil/: __init__.py  hydrology.py  properties.py
terrae_py/: .gitignore  README.md  modelE2.1.2.code-workspace  pyproject.toml
terrae_py/doc/: terrae_technical_description.tex
terrae_py/notebooks/: sample_run_demo.ipynb
terrae_py/scripts/: README.md  compare_explicit_implicit.py  debug_implicit_mass.py  visualize_run.py
terrae_py/src/terrae/: __init__.py  constants.py
terrae_py/src/terrae/soil/: heat.py  hydraulic.py  hydrology.py
terrae_py/tests/: test_import.py
tests/: __init__.py  test_driver.py  test_properties.py
utilities/: README.md  soillayergenerator.py  soilwaterbalance.py  updated_soilwaterbalance.py
